Move Gemini AI service to backend for improved security
Relocates AI quiz generation from frontend to backend to keep API keys server-side and prevent exposure in client code. This architectural change centralizes AI logic, improves maintainability, and enables better rate limiting and monitoring.

Backend changes:
- Add generate_ai_quiz endpoint in views.py with retry logic and error handling
- Add google-generativeai dependency to requirements.txt
- Configure Gemini API with backend environment variable

Frontend changes:
- Update QuizGenerateScreen to call backend API instead of direct Gemini integration
- Add generateAIQuiz method to API service
- Remove Gemini API key from frontend environment configuration
- Clean up environment.ts to remove unused Gemini config

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,3 @@
+# Backend API Configuration
+# The Gemini AI service is now handled by the backend
 EXPO_PUBLIC_API_BASE_URL=http://192.168.0.100:8000
-EXPO_PUBLIC_GEMINI_API_KEY=your-gemini-api-key
